[package]
name = "rclink"
version = "0.1.0"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

js-sys = "0.3.71"
web-sys = { version = "0.3.69", features = ["Window", "Location"] }
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
